--- a/src/main/resources/informe-LaTex/arquitecturasQ.tex
+++ b/src/main/resources/informe-LaTex/arquitecturasQ.tex
@@ -4,8 +4,7 @@
 \subsection{Características generales} 
 
 La Arquitectura Q tiene 8 registros de uso general de 16 bits, denominados R0..R7, registros especiales de 16 bits tales como PC - \textit{Program counter}, SP\footnote{Comienza en la dirección FFEF.} - \textit{Stack Pointer} y los Flags de un bit como Negative, oVerflow, Carry, Zero. También tiene un conjunto de instrucciones que detallaran mas adelante. Todas las instrucciones Alteran los flags excepto MOV, CALL, RET, JMP, Jxx. De las instrucciones que alteran los Flags, todas dejan C y V en 0 a excepción de ADD, SUB y CMP.  
-%\ojo{La instrucción DIV tiene como efecto [destino (- destino \%\footnote{El carácter \% denota el cociente de la %división entera.} origen ]. 
-%La instrucción MUL\footnote{El resultado de la operación \textbf{MUL} ocupa 32 bits, almacenándose los 16 bits menos %significativos en el operando destino y los 16 bits mas significativos en el registro \textbf{R7}.} tiene como %efecto [destino (- destino * origen].}{esto va mas adelante!}
+
 Por ultimo tiene una Memoria que tiene direcciones de 16 bit, donde el tamaño de cada celda también es de 16 bit. La Memoria tiene un tamanio de 65536 celdas. \\ 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Modos de direccionamiento}
@@ -119,8 +118,12 @@ Esta instrucción describe la operación lógica "o" bit a bit entre los datos d
 
 El formato de instrucción de un operando origen es el siguiente:
 
-  CodOp   +   relleno   +  Modo origen +   Origen
-(4 bits)      (000000)        (6 bits)    (16 bits)
+\formatoinst
+{|c|c|c|c|}
+{4}
+{CodOp& Relleno&\msrc{}& Operando \src{}\\
+(4b)     &   (000000)  &  (6b)   &  (16b) 
+}
 
 \begin{enumerate}
 \item \textbf{CALL origen}
@@ -137,8 +140,12 @@ El efecto del JMP es cambiar el PC (Program Counter) por el dato que esta guarda
 
 El formato de instrucción de un operando destino es el siguiente:
 
-  CodOp   +  Modo origen  +  relleno  +  Origen
-(4 bits)      (6 bits)      (000000)    (16 bits)
+\formatoinst
+{|c|c|c|c|}
+{4}
+{CodOp & \msrc{} & Relleno & Operando \src{}\\
+(4b)   &   (6b)  & (000000)&  (16b) 
+} 
 
 \begin{enumerate}
 \item \textbf{NOT destino}
@@ -151,8 +158,8 @@ Esta instrucción describe la operación lógica "negación" bit a bit en el dat
 
 El formato de instrucción sin operandos es el siguiente:
 
- CodOp     +    relleno 
-(4 bits)     (000000000000)
+\formatoinst{|c|c|}{2}{CodOp & Relleno \\  (4b) & (000000000000)}
+}
 
 
 \begin{enumerate}
