agregando tablas de formato de instruccion

--- a/src/main/resources/informe-LaTex/arquitecturasQ.tex
+++ b/src/main/resources/informe-LaTex/arquitecturasQ.tex
@@ -165,7 +165,7 @@ El formato de instrucción sin operandos es el siguiente:
 \begin{enumerate}
 \item \textbf{RET}
 Código de operación: 0110
-El efecto del ret es cambiar el pc por el dato que esta guardado en la celda de memoria que se encuentra en el SP (Stack pointer) y decrementar el SP ya que describe la finalización de la ejecución de una subrutina y la ejecución del resto del programa.
+El efecto del ret es cambiar el pc por el dato que esta guardado en la celda de memoria cuya direccion se encuentra en el SP (Stack pointer) y decrementar el SP ya que describe la finalización de la ejecución de una subrutina y la ejecución del resto del programa.
 \end{enumerate}
 
 
