--- a/src/main/resources/informe-LaTex/simulador.tex
+++ b/src/main/resources/informe-LaTex/simulador.tex
@@ -113,7 +113,7 @@ Como se observa en la figura \ref{Interprete} el Interprete es un \textit{single
 
 \subsubsection{Modos de direccionamiento y W16}
 
-\ojo{}{Esta jerarquía de clases permite controlar el acceso a los operandos, mediante un objeto ModoDireccionamiento que controla el acceso a un objeto W16, que es quien contiene el valor propiamente dicho}. 
+Esta jerarquía de clases permite controlar el acceso a los operandos, mediante un objeto ModoDireccionamiento que controla el acceso a un objeto W16, que es quien contiene el valor propiamente dicho. 
 Como se observa en la figura \ref{ModoDireccionamiento} los modos de direccionamiento extienden del trait ModoDireccionamiento, donde se encuentran declarados mensajes necesarios para manejar todas las subclases de manera polimórfica. Entre estos mensajes podemos enumerar:
 \begin{itemize}
 \item  \textbf{representacionString:}
