agregando por fin el grafico de cebolla

--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -79,7 +79,7 @@ Actualmente se busca incorporar el \textbf{Simulador Qsim} en la materia con el 
 
 Las versiones de la arquitectura Q están pensadas para incorporar funcionalidades de manera que la curva de aprendizaje sea adecuada para los alumnos, siendo paulatina e incremental, es decir, cada arquitectura $Q_{i+1}$ agrega más funcionalidad (ya sean instrucciones nuevas o modos de direccionamiento) a la arquitectura  $Q_{i}$ anterior.
 
-\ojo{Incorporar lo que sigue a un gráfico de la estructura en cebolla}{}
+\graf{ArquitecturasQ}{Cebolla Qi}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
