quitando begin cmp

--- a/src/main/resources/informe-LaTex/erroresComunes.tex
+++ b/src/main/resources/informe-LaTex/erroresComunes.tex
@@ -49,7 +49,7 @@ En la linea numero 1 el operando origen es directo lo cual es invalido en la arq
 \begin{verbatim}
 CMP R3, [0xA000]
 MOV R4 R0 
-\begin{verbatim}
+\end{verbatim}
 
 En la línea numero 2 entre los operandos no se encuentra la coma que los separa (La sintáxis de las instrucciones de dos operandos especifica que debe haber una coma separando los operandos.). Cuando se quiera ensamblar este programa, el ensamblador detectará este error y en la pantalla se mostrará mediante un pop-up el siguiente mensaje:
 
