--- a/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
+++ b/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
@@ -22,16 +22,18 @@ Por otro lado, tuvieron que solicitarse extensiones al equipo de desarrolladores
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%55
 \section{Casos de prueba (revisar redaccion!!)}
 
-\ojo{En esta sección se describen los casos de prueba de la aplicación.}{Falta explicar porqué es importante esta sección}
+En esta sección se describen los casos de prueba de la aplicación realizados para ilustrar el alcance de la aplicación y su robustez.
 
 \subsection{Chequeo de sintaxis en la distintas Qi}
 
-Para chequear la sintaxis de cada \textbf{Arquitectura Q}, primero escribimos un programa Qi en un archivo con extension .qsim luego este archivo lo recibe el objeto Parser que se encargara de chequear la sintaxis. 
-Para eso realizamos dos casos de prueba por cada Qi:
-\begin{enumerate}
-\item \textbf{Chequear programa Qi valido}
+El chequeo de sintaxis de cada \textbf{Arquitectura Q} se reliza primero escribiendo un programa Qi en un archivo con extension .qsim y luego, haciendo que este mismo archivo sea tomado por el objeto Parser cuya responsabilidad es chequear la sintaxis. 
 
-\ojo{Agarramos el programa Qi válido\footnote{Un programa Qi valido es un programa en cualquier sintáticamente correcto en alguna arquitectura Q.} y se lo pasamos al Parser, cuando termina de chequear devuelve un resultado, como es de esperar devuelve un objeto programa con la lista de instrucciones. Tomamos ese resultado y como ultimo paso comparamos si el programa resultado es igual al programa esperado.}{OJO con la redacción}
+Para chequear la sintaxis de cada \textbf{Arquitectura Q} se realizaron dos casos de prueba por cada Qi:
+\begin{enumerate}
+\item \textbf{Chequear programa Qi válido}
+
+Se toma como input del objeto instancia Parser un programa Qi válido\footnote{Un programa Qi válido es un programa sintáticamente correcto en alguna arquitectura Q.}, este chequeará la sintaxis del programa acorde a la artetura Qi seleccionada (Un programa sintácticamente válido en Q6 puede no ser sintácticamente válido en Q1 si utiliza modos de direccionamiento o instrucciones que aún no fueron agregadas en Q1). Al terminar de chequear el programa, el objeto parser retorna un objeto instancia de la clase Programa con la lista de instrucciones que fueron ensambladas. 
+Se toma dicho resultado y como ultimo paso se compara si el programa resultado es igual al programa esperado (que concuerda en objetos con el programa en código fuente escrito en el input).
 
 
 \item \textbf{Chequear programa Qi es invalido} 
@@ -165,5 +167,7 @@ Actualmente estas instrcucciones se encuentran implementadas pero no habilitadas
 \item Entrada y Salida.
 
 Que el simulador admita la interacción con dispositivos de E/S. Para eso tenemos que modelar dispositivos como el teclado, impresora, monitor, etc.
+
+\item Implementar interrupcciones
 
 \end{itemize}
